# vulture

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  linker.ld  main.go  rust-toolchain.toml  x86_64-vulture.json
kernel/: Cargo.toml  trap.go  trap.s
kernel/isyscall/: isyscall.go  syscall_amd64.go
kernel/mm/: mm.go  mm.s  pool.go  sys.go
kernel/multiboot/: info.go  multiboot.go
kernel/src/: acpi.rs  gdt.rs  hal.rs  idt.rs  interrupts.rs  lib.rs  process.rs  scheduler.rs  serial.rs  shell.rs  syscall.rs  vfs.rs  vga.rs
kernel/src/arch/x86_64/: apic.rs  hpet.rs  ipi.rs  msi.rs  msr.rs  smp.rs  tss.rs  vmm.rs
kernel/src/crypto/: aes.rs  chacha20.rs  poly1305.rs  rsa.rs  sha256.rs  sha3.rs
kernel/src/drivers/: ata.rs  keyboard.rs  mod.rs  pci.rs  timer.rs
kernel/src/drivers/acpi/: aml.rs  fadt.rs  madt.rs  rsdp.rs
kernel/src/drivers/gpu/: virtio_gpu.rs
kernel/src/drivers/input/: ps2_mouse.rs
kernel/src/drivers/net/: e1000.rs  rtl8139.rs
kernel/src/fs/: devfs.rs  ext2.rs  fat32.rs  procfs.rs  ramfs.rs  sysfs.rs
kernel/src/ipc/: mqueue.rs  shm.rs
kernel/src/mm/: mmap.rs  oom_killer.rs  page_db.rs  slab.rs  swapping.rs  vbox.rs
kernel/src/net/: arp.rs  dhcp.rs  icmp.rs  loopback.rs  tcp.rs  udp.rs
kernel/src/security/: audit.rs  jail.rs  rbac.rs  rng.rs  sandbox.rs  smack.rs
kernel/src/ui/: event_loop.rs  font_renderer.rs  widget_toolkit.rs  window_manager.rs
kernel/src/util/: condition_var.rs  lock_free.rs  mutex.rs  ring_buffer.rs  rwlock.rs  semaphore.rs
kernel/sys/: sys.go  sys_amd64.s  sys_i386.s
kernel/trap/: registry.go
(+114 files in other folders)
