[workspace]
resolver = "2"
members = [
    "boot",
    "kernel",
    "memory",
    "ipc",
    "security",
    "fs-vulturefs",
    "apps-shell",
    "networking",
    "services",
    "graphics",
    "ui",
    "pkg",
]

[package]
name = "vulture"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vulture-kernel = { path = "kernel" }
bootloader = { version = "0.9", features = ["map_physical_memory"] }
x86_64 = "0.15"